# smarttek-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py
api/routes/: pipeline.py
data/sample/precomputed/: orthophoto.tif
data/sample/thermal/: thermal_01.json  thermal_01.npy  thermal_02.json  thermal_02.npy
demos/: uavid3d_demo.py
frontend/: index.html
models/crack_detection/: README.md
pipeline/: __init__.py
pipeline/analysis/: __init__.py  analyzer.py
pipeline/detection/: __init__.py  detector.py
pipeline/ingest/: __init__.py  models.py  validator.py
pipeline/photogrammetry/: __init__.py  odm_client.py
pipeline/report/: __init__.py  generator.py
pipeline/report/templates/: report.html
pipeline/thermal/: __init__.py  extractor.py
scripts/: create_sample_data.py
tests/: conftest.py  sample_run.py  test_detection.py  test_ingest.py  test_thermal.py
